--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
             <p class="descripcion">Nos alegra tenerte de vuelta y estamos listos para atender tus necesidades. 
                 Inicia sesión y continúa aprovechando al máximo nuestra plataforma</p>
             <div class="elemento"> 
-                <img src= '../../assets/iconos/Shape.png' class="icon">
+                <img src= '../../assets/iconos/Shape.png' class="icon" alt="Monitoreo">
                 <div>
                     <p class="subTitulo">Monitoreo Integral</p>
                     <p class="texto">Administra, Monitorea multiples plantas de forma centralizada</p>
@@ -17,7 +17,7 @@
            
             
             <div class="elemento">
-                <img src= '../../assets/iconos/Icon.png' class="icon">
+                <img src= '../../assets/iconos/Icon.png' class="icon" alt="Notificaciones">
                 <div>
                     <p class="subTitulo">Notificaciones en tiempo real</p>
                     <p class="texto">Recibi notificaciones en tiempo real sobre la mediciones</p>
