--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,9 @@
-<p>nav-bar works!</p>
+<section class="navbar">
+    <h1>Monitoreo global</h1>
+    <section class="opciones">
+        <img src="../../assets/iconos/mundo_digital.png" class="icon" alt="Conección">
+        <img src="../../assets/iconos/tuerca.png" class="icon" alt="Optiones">
+        <img src="../../assets/iconos/campana.png" class="icon" alt="Notificaciones">
+        <p>Juan Carlos</p>
+    </section>
+</section>
