parte tabla y conecciones

--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -1,1 +1,35 @@
-<p>global works!</p>
+<section class="lecturas">
+    <div class="contenedor">
+        <div class="texto">
+            <p class="tipo">Lecturas OK</p>
+            <p class="numero">1234</p>
+        </div>
+        
+        <img src="../../assets/iconos/tildelVerde.png" alt="Lectura Ok" class="imagen">
+    </div>
+    <div class="contenedor">
+        <div class="texto">
+            <p class="tipo">Alertas medias</p>
+            <p class="numero">932</p>
+        </div>
+        
+        <img src="../../assets/iconos/exclamacionAmarilla.png" alt="Lectura media" class="imagen">
+    </div>
+    <div class="contenedor">
+        <div class="texto">
+            <p class="tipo">Alertas Rojas</p>
+            <p class="numero">932</p>
+        </div>
+       
+        <img src="../../assets/iconos/AlertaRoja.png" alt="Lectura roja" class="imagen">
+    </div>
+    <div class="contenedor">
+        <div class="texto">
+            <p class="tipo">Sensores deshabilitados</p>
+            <p class="numero">932</p>
+        </div>
+        
+        <img src="../../assets/iconos/cruzNaranja.png" alt="Sensor deshabilitado" class="imagen">
+    </div>
+    
+</section>>
