--- a/src/app/plantas/plantas.component.html
+++ b/src/app/plantas/plantas.component.html
@@ -1,1 +1,21 @@
-<p>plantas works!</p>
+<section class="contenedor">
+    <section class="titulo">
+        <h4>Plantas</h4>
+        <button>+ Crear nueva planta</button>
+    </section>
+    <hr>
+    <section class="tabla">
+        <table border="0">
+            <thead>
+                <tr>
+                    <th>País</th>
+                    <th>Nombre de la planta</th>
+                    <th>Lecturas</th>
+                    <th>Alertas medias</th>
+                    <th>Alertas rojas</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+        </table>
+    </section>
+</section>
