tarjetas de tipos

--- a/src/app/lecturas/lecturas.component.html
+++ b/src/app/lecturas/lecturas.component.html
@@ -1,1 +1,191 @@
-<p>lecturas works!</p>
+<section class="contenedor">
+    <div class="fila">
+        <section class="tarjeta">
+            <div class="informacion">
+                <p class="tipo">Temperatura</p>
+                <div class="valores">
+                    <div class="valor">
+                        <img src={{tilde}} alt="Ok" class="estado">
+                        <p class="cantidad">100</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{exclamacion}} alt="Medias" class="estado">
+                        <p class="cantidad">20</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{alerta}} alt="Rojo" class="estado">
+                        <p class="cantidad">3</p>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <img src="../../assets/iconos/temperatura.png" alt="Temperatura"class="icono">
+        </section>
+
+        <section class="tarjeta">
+            <div class="informacion">
+                <p class="tipo">Presión</p>
+                <div class="valores">
+                    <div class="valor">
+                        <img src={{tilde}} alt="Ok" class="estado"class="estado">
+                        <p class="cantidad">100</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{exclamacion}} alt="Medias" class="estado">
+                        <p class="cantidad">20</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{alerta}} alt="Rojo"class="estado">
+                        <p class="cantidad">3</p>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <img src="../../assets/iconos/presion.png" alt="Presión"class="icono">
+        </section>
+
+        <section class="tarjeta">
+            <div class="informacion">
+                <p class="tipo">Viento</p>
+                <div class="valores">
+                    <div class="valor">
+                        <img src={{tilde}} alt="Ok"class="estado">
+                        <p class="cantidad">100</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{exclamacion}} alt="Medias"class="estado">
+                        <p class="cantidad">20</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{alerta}} alt="Rojo"class="estado">
+                        <p class="cantidad">3</p>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <img src="../../assets/iconos/Viento.png" alt="Viento"class="icono">
+        </section>
+
+        <section class="tarjeta">
+            <div class="informacion">
+                <p class="tipo">Niveles</p>
+                <div class="valores">
+                    <div class="valor">
+                        <img src={{tilde}} alt="Ok"class="estado">
+                        <p class="cantidad">100</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{exclamacion}} alt="Medias"class="estado">
+                        <p class="cantidad">20</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{alerta}} alt="Rojo"class="estado">
+                        <p class="cantidad">3</p>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <img src="../../assets/iconos/niveles.png" alt="Niveles"class="icono">
+        </section>
+        
+    </div>
+
+    <div class="fila">
+        <section class="tarjeta">
+            <div class="informacion">
+                <p class="tipo">Energía</p>
+                <div class="valores">
+                    <div class="valor">
+                        <img src={{tilde}} alt="Ok"class="estado">
+                        <p class="cantidad">100</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{exclamacion}} alt="Medias"class="estado">
+                        <p class="cantidad">20</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{alerta}} alt="Rojo"class="estado">
+                        <p class="cantidad">3</p>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <img src="../../assets/iconos/energia.png" alt="Energía"class="icono">
+        </section>
+
+        <section class="tarjeta">
+            <div class="informacion">
+                <p class="tipo">Tensión</p>
+                <div class="valores">
+                    <div class="valor">
+                        <img src={{tilde}} alt="Ok"class="estado">
+                        <p class="cantidad">100</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{exclamacion}} alt="Medias"class="estado">
+                        <p class="cantidad">20</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{alerta}} alt="Rojo"class="estado">
+                        <p class="cantidad">3</p>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <img src="../../assets/iconos/tension.png" alt="Tensión"class="icono">
+        </section>
+
+        <section class="tarjeta">
+            <div class="informacion">
+                <p class="tipo">Monóxido de carbono</p>
+                <div class="valores">
+                    <div class="valor">
+                        <img src={{tilde}} alt="Ok"class="estado">
+                        <p class="cantidad">100</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{exclamacion}} alt="Medias"class="estado">
+                        <p class="cantidad">20</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{alerta}} alt="Rojo"class="estado">
+                        <p class="cantidad">3</p>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <img src="../../assets/iconos/monoxido.png" alt="Monóxido de Carbono"class="icono">
+        </section>
+
+        <section class="tarjeta">
+            <div class="informacion">
+                <p class="tipo">Otros gases</p>
+                <div class="valores">
+                    <div class="valor">
+                        <img src={{tilde}} alt="Ok"class="estado">
+                        <p class="cantidad">100</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{exclamacion}} alt="Medias"class="estado">
+                        <p class="cantidad">20</p>
+                    </div>
+                    <div class="valor">
+                        <img src={{alerta}} alt="Rojo"class="estado">
+                        <p class="cantidad">3</p>
+                    </div>
+                    
+                </div>
+                
+            </div>
+            <img src="../../assets/iconos/gases.png" alt="Otros Gases" class="icono">
+        </section>
+    </div>
+    
+</section>
