--- a/src/app/plantas/plantas.component.scss
+++ b/src/app/plantas/plantas.component.scss
@@ -1,11 +1,13 @@
 .contenedor{
     width: 1262px;
-height: 350px;
-top: 245px;
-left: 110px;
-gap: 0px;
-border-radius: 15px 0px 0px 0px;
-opacity: 0px;
+    height: 350px;
+    top: 245px;
+    left: 110px;
+    gap: 0px;
+    border-radius: 15px 15px 15px 15px;
+    opacity: 0px;
+    background: #FFFFFF;
+
 
 .titulo{
     display: flex;
