--- a/src/app/plantas/plantas.component.scss
+++ b/src/app/plantas/plantas.component.scss
@@ -93,6 +93,28 @@ hr{
         justify-content: center;
         cursor: pointer;
     }
+    .menu{
+        position: absolute;
+        margin-top: 2vh;
+       border-radius: 15px;
+        background-color: grey;
+        border: 1px solid #ccc;
+        padding: 5px;
+        z-index: 1000;
+        ul{
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            li{
+                padding: 8px 12px;
+                cursor: pointer;
+            }
+            li:hover {
+                background-color: #f0f0f0;
+            }
+        }
+    }
+    
     .pais{
         display: flex;
         align-items: center;
