--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,17 @@
-<p>dashboard works!</p>
+
+<div class="contenedor">
+    <section class="sidenav">
+        <app-sidenav></app-sidenav>
+    </section>
+   
+    <section class="informacion">
+        <app-nav-bar></app-nav-bar>
+        <app-global></app-global>
+        <app-plantas></app-plantas>
+        <app-lecturas></app-lecturas>
+    </section>
+    
+</div>
+
+
+
