--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -32,4 +32,4 @@
         <img src="../../assets/iconos/cruzNaranja.png" alt="Sensor deshabilitado" class="imagen">
     </div>
     
-</section>>
+</section>
