--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,16 +1,16 @@
 .navbar{
     display: flex;
-    width: 100%;
     justify-content: space-between;
+    align-items: center;
+    
     h1{
         
-        width: 20%;
+        width: 257px;
         height: 45px;
         top: 50px;
         left: 110px;
         gap: 0px;
-        opacity: 0px;
-        margin-left: 4vh;
+        opacity: 0px;    
 
         font-family: Poppins;
         font-size: 30px;
@@ -19,19 +19,30 @@
         text-align: left;
 
     }
+    
 
     .opciones{
         display:flex;
         align-items: center;
-        justify-content: space-around;
-        width: 10%;
+        margin-left: 85vh;
+        p{
+            width: 100vh;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 27px;
+            
+            margin-left: 10px;
+            
+        }
+    
         .icon{
             width: 20px;
             height: 20px;
             top: 62px;
-            left: 1157px;
+            left: 100px;
             gap: 0px;
             opacity: 0px;
+            margin-right: 1.5vh;
         }
     }
     
