--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -4,11 +4,11 @@
     align-items: center;
     height: 100vh;
 
-    width: 5%;
+    width: 80px;
     
     left: 80px;
     gap: 0px;
-    background: #FFFFFF;
+    background: white;
 
 
     .logo{
