--- a/src/app/crear-planta/crear-planta.component.html
+++ b/src/app/crear-planta/crear-planta.component.html
@@ -22,7 +22,7 @@
         </select>
             </div>
         <div class="botones">
-            <button class="cancelar">Cancelar</button>
+            <button class="cancelar" (click)="cancelarCreacion($event)">Cancelar</button>
             <input type="submit" value="Crear" (click)="crear()" class="crear">
         </div>
         </div>
