--- a/src/app/plantas/plantas.component.html
+++ b/src/app/plantas/plantas.component.html
@@ -1,7 +1,9 @@
+
 <section class="contenedor">
     <section class="titulo">
         <h4>Plantas</h4>
-        <button class="crear">+ Crear nueva planta</button>
+        <button class="crear" (click)="mostrarCrear(true)">+ Crear nueva planta</button>
+       
     </section>
     <hr>
     <section class="tabla">
@@ -15,56 +17,24 @@
                     <th>Alertas rojas</th>
                     <th>Acciones</th>
                 </tr>
-                    <tr>
-                        <td><div class="pais"><img src="https://flagcdn.com/w320/ar.png" alt="bandera" class="bandera"><p class="pais texto">Argentina</p></div></td>
-                        <td><p class="nombre texto">Pepsi</p></td>
-                        <td><p class="ok texto">200</p></td>
-                        <td><p class="medio texto">200</p></td>
-                        <td><p class="rojo texto">200</p></td>
-                        <td class="puntitos"><img src="../../assets/iconos/puntos.png" alt="opciones" class="puntos"></td>
-                    </tr>
-                    <tr>
-                        <td><div class="pais texto"><img src="https://flagcdn.com/w320/ar.png" alt="bandera" class="bandera"><p>Brazil</p></div></td>
-                        <td><p class="nombre texto">Pepsi</p></td>
-                        <td><p class="ok texto">200</p></td>
-                        <td><p class="medio texto">200</p></td>
-                        <td><p class="rojo texto">200</p></td>
-                        <td class="puntitos"><img src="../../assets/iconos/puntos.png" (click)="mostrarOpcion(1)" alt="opciones" class="puntos">
-                        @if(opcionesVisible[1]){
-                        <div class="menu">
-                            <ul>
-                                <li>Modificar</li>
-                                <li>Eliminar</li>
-                            </ul>
-                        </div>
-                            
-                        }
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><div class="pais texto"><img src="https://flagcdn.com/w320/ar.png" alt="bandera" class="bandera"><p>Venezuela</p></div></td>
-                        <td><p class="nombre texto">Pepsi</p></td>
-                        <td><p class="ok texto">200</p></td>
-                        <td><p class="medio texto">200</p></td>
-                        <td><p class="rojo texto">200</p></td>
-                        <td class="puntitos"><img src="../../assets/iconos/puntos.png" alt="opciones" class="puntos"></td>
-                    </tr>
-                    <tr>
-                        <td><div class="pais texto"><img src="https://flagcdn.com/w320/ar.png" alt="bandera" class="bandera"><p>España</p></div></td>
-                        <td><p class="nombre texto">Pepsi</p></td>
-                        <td><p class="ok texto" >200</p></td>
-                        <td><p class="medio texto">200</p></td>
-                        <td><p class="rojo texto">200</p></td>
-                        <td class="puntitos"><img src="../../assets/iconos/puntos.png" alt="opciones" class="puntos"></td>
-                    </tr>
+                    
                     @for(planta of plantas; track planta.getId; let index = $index){
                         <tr>
-                            <td><img src="planta.getBandera" alt="bandera"><p>{{planta.getPais}}</p></td>
-                            <td><p>{{planta.getNombre}}</p></td>
-                            <td><p>{{planta.getLecturas.length}}</p></td>
-                            <td><p>{{lecturasMedias[index]}}</p></td>
-                            <td><p>{{lecturasRojas[index]}}</p></td>
-                            <td><img src="../../assets/iconos/puntos.png" alt="opciones"></td>
+                            <td><div class="pais texto"><img [src]="planta.getBandera" alt="bandera" class="bandera"><p>{{planta.getPais}}</p></div></td>
+                            <td><p class="nombre texto">{{planta.getNombre}}</p></td>
+                            <td><p class="ok texto">{{lecturasOk[index]}}</p></td>
+                            <td><p class="medio texto">{{lecturasMedias[index]}}</p></td>
+                            <td><p class="rojo texto">{{lecturasRojas[index]}}</p></td><div class="posicion">
+                            <td class="puntitos"><img src="../../assets/iconos/puntos.png" (click)="mostrarOpcion(planta.getId)" alt="opciones" class="puntos"></td>
+                            @if(opcionesVisible[index]){
+                                <div class="menu">
+                                    <ul>
+                                        <li (click)="mostrarModificar(index, true)">Modificar</li>
+                                        <li (click)="eliminarPlanta(index)">Eliminar</li>
+                                    </ul>
+                                </div>  
+                                }
+                            </div>
                         </tr>
                     }
                
@@ -72,3 +42,19 @@
         </table>
     </section>
 </section>
+@if(crearHabilitado){
+    <div class="body">
+    <div class="componente">
+        <app-crear-planta (cancelar)="mostrarCrear($event)"></app-crear-planta>
+    </div>
+</div>    
+}
+
+
+@if(modificarHabilitado){
+    <div class="body">
+ <div class="componente">
+     <app-editar-planta [idPlanta]="idPlanta" (mostrar)="mostrarModificar(0,$event)"></app-editar-planta>
+ </div>
+</div>
+}
