--- a/src/app/crear-planta/crear-planta.component.scss
+++ b/src/app/crear-planta/crear-planta.component.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 900px;
     gap: 0px;
-    opacity: 30%;
+    opacity: 40%;
     background: #000000;
 
 }
@@ -99,6 +99,7 @@
             align-items: center;
             margin-left: 4vh;
             margin-top: 2vh;
+            
             .cancelar  {
                 width: 100px;
                 height: 36px;
@@ -109,7 +110,7 @@
                 opacity: 0px;
                 border: 1px solid #33A3AA;
                 color: #33A3AA;
-        
+                cursor: pointer;
             }
             .crear{
                 width: 100px;
@@ -126,6 +127,7 @@
                 line-height: 21px;
                 text-align: center;
                 margin-left: 2vh;
+                cursor: pointer;
             }
         }
         
