--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -2,7 +2,7 @@
     <div class="contenedor">
         <div class="texto">
             <p class="tipo">Lecturas OK</p>
-            <p class="numero">1234</p>
+            <p class="numero">{{lecturasOk}}</p>
         </div>
         
         <img src="../../assets/iconos/tildelVerde.png" alt="Lectura Ok" class="imagen">
@@ -10,7 +10,7 @@
     <div class="contenedor">
         <div class="texto">
             <p class="tipo">Alertas medias</p>
-            <p class="numero">932</p>
+            <p class="numero">{{lecturasMedias}}</p>
         </div>
         
         <img src="../../assets/iconos/exclamacionAmarilla.png" alt="Lectura media" class="imagen">
@@ -18,7 +18,7 @@
     <div class="contenedor">
         <div class="texto">
             <p class="tipo">Alertas Rojas</p>
-            <p class="numero">932</p>
+            <p class="numero">{{lecturasRojas}}</p>
         </div>
        
         <img src="../../assets/iconos/AlertaRoja.png" alt="Lectura roja" class="imagen">
@@ -26,7 +26,7 @@
     <div class="contenedor">
         <div class="texto">
             <p class="tipo">Sensores deshabilitados</p>
-            <p class="numero">932</p>
+            <p class="numero">{{sensoresDesabilitados}}</p>
         </div>
         
         <img src="../../assets/iconos/cruzNaranja.png" alt="Sensor deshabilitado" class="imagen">
