--- a/src/app/lecturas/lecturas.component.html
+++ b/src/app/lecturas/lecturas.component.html
@@ -6,15 +6,15 @@
                 <div class="valores">
                     <div class="valor">
                         <img src={{tilde}} alt="Ok" class="estado">
-                        <p class="cantidad">100</p>
+                        <p class="cantidad">{{lecturasOk[0]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{exclamacion}} alt="Medias" class="estado">
-                        <p class="cantidad">20</p>
+                        <p class="cantidad">{{lecturasMedia[0]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{alerta}} alt="Rojo" class="estado">
-                        <p class="cantidad">3</p>
+                        <p class="cantidad">{{lecturasRoja[0]}}</p>
                     </div>
                     
                 </div>
@@ -29,15 +29,15 @@
                 <div class="valores">
                     <div class="valor">
                         <img src={{tilde}} alt="Ok" class="estado"class="estado">
-                        <p class="cantidad">100</p>
+                        <p class="cantidad">{{lecturasOk[1]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{exclamacion}} alt="Medias" class="estado">
-                        <p class="cantidad">20</p>
+                        <p class="cantidad">{{lecturasMedia[1]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{alerta}} alt="Rojo"class="estado">
-                        <p class="cantidad">3</p>
+                        <p class="cantidad">{{lecturasRoja[1]}}</p>
                     </div>
                     
                 </div>
@@ -52,15 +52,15 @@
                 <div class="valores">
                     <div class="valor">
                         <img src={{tilde}} alt="Ok"class="estado">
-                        <p class="cantidad">100</p>
+                        <p class="cantidad">{{lecturasOk[2]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{exclamacion}} alt="Medias"class="estado">
-                        <p class="cantidad">20</p>
+                        <p class="cantidad">{{lecturasMedia[2]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{alerta}} alt="Rojo"class="estado">
-                        <p class="cantidad">3</p>
+                        <p class="cantidad">{{lecturasRoja[2]}}</p>
                     </div>
                     
                 </div>
@@ -75,15 +75,15 @@
                 <div class="valores">
                     <div class="valor">
                         <img src={{tilde}} alt="Ok"class="estado">
-                        <p class="cantidad">100</p>
+                        <p class="cantidad">{{lecturasOk[3]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{exclamacion}} alt="Medias"class="estado">
-                        <p class="cantidad">20</p>
+                        <p class="cantidad">{{lecturasMedia[3]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{alerta}} alt="Rojo"class="estado">
-                        <p class="cantidad">3</p>
+                        <p class="cantidad">{{lecturasRoja[3]}}</p>
                     </div>
                     
                 </div>
@@ -101,15 +101,15 @@
                 <div class="valores">
                     <div class="valor">
                         <img src={{tilde}} alt="Ok"class="estado">
-                        <p class="cantidad">100</p>
+                        <p class="cantidad">{{lecturasOk[4]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{exclamacion}} alt="Medias"class="estado">
-                        <p class="cantidad">20</p>
+                        <p class="cantidad">{{lecturasMedia[4]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{alerta}} alt="Rojo"class="estado">
-                        <p class="cantidad">3</p>
+                        <p class="cantidad">{{lecturasRoja[4]}}</p>
                     </div>
                     
                 </div>
@@ -124,15 +124,15 @@
                 <div class="valores">
                     <div class="valor">
                         <img src={{tilde}} alt="Ok"class="estado">
-                        <p class="cantidad">100</p>
+                        <p class="cantidad">{{lecturasOk[5]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{exclamacion}} alt="Medias"class="estado">
-                        <p class="cantidad">20</p>
+                        <p class="cantidad">{{lecturasMedia[5]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{alerta}} alt="Rojo"class="estado">
-                        <p class="cantidad">3</p>
+                        <p class="cantidad">{{lecturasRoja[5]}}</p>
                     </div>
                     
                 </div>
@@ -147,15 +147,15 @@
                 <div class="valores">
                     <div class="valor">
                         <img src={{tilde}} alt="Ok"class="estado">
-                        <p class="cantidad">100</p>
+                        <p class="cantidad">{{lecturasOk[6]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{exclamacion}} alt="Medias"class="estado">
-                        <p class="cantidad">20</p>
+                        <p class="cantidad">{{lecturasMedia[6]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{alerta}} alt="Rojo"class="estado">
-                        <p class="cantidad">3</p>
+                        <p class="cantidad">{{lecturasRoja[6]}}</p>
                     </div>
                     
                 </div>
@@ -170,15 +170,15 @@
                 <div class="valores">
                     <div class="valor">
                         <img src={{tilde}} alt="Ok"class="estado">
-                        <p class="cantidad">100</p>
+                        <p class="cantidad">{{lecturasOk[7]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{exclamacion}} alt="Medias"class="estado">
-                        <p class="cantidad">20</p>
+                        <p class="cantidad">{{lecturasMedia[7]}}</p>
                     </div>
                     <div class="valor">
                         <img src={{alerta}} alt="Rojo"class="estado">
-                        <p class="cantidad">3</p>
+                        <p class="cantidad">{{lecturasRoja[7]}}</p>
                     </div>
                     
                 </div>
