--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,6 +6,6 @@
         <img src="../../assets/iconos/tuerca.png" class="icon" alt="Optiones">
         <img src="../../assets/iconos/campana.png" class="icon" alt="Notificaciones">
       
-        <p>Juan Carlos</p>
+        <p>{{nombreApellido}}</p>
     </section>
 </section>
