--- a/src/app/plantas/plantas.component.scss
+++ b/src/app/plantas/plantas.component.scss
@@ -1,6 +1,33 @@
+
+.body{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo negro semitransparente */
+    z-index: 1000; /* Asegura que esté por encima de otros contenidos */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.componente{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 2000;
+   
+}
 .contenedor{
     width: 1262px;
-    height: 350px;
+    
     top: 245px;
     left: 110px;
     gap: 0px;
@@ -94,14 +121,18 @@ hr{
         justify-content: center;
         cursor: pointer;
     }
+    .posicion{
+        display: flex;
+    }
     .menu{
         position: absolute;
-        margin-top: 2vh;
+        
        border-radius: 15px;
         background-color: grey;
         border: 1px solid #ccc;
         padding: 5px;
         z-index: 1000;
+        margin-left: 5vh;
         ul{
             list-style-type: none;
             padding: 0;
