--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -69,6 +69,7 @@
             </form>
         
             <p class="proteccion">Protegido por reCAPTCHA y sujeto a la <a class="politicas">Politica de Privacidad</a> y<a class="politicas"> Condiciones</a></p>
+            <p class="registrarse" (click)="irRegistro()">Registrarse</p>
         </section>
        
     </section>
