--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -320,6 +320,11 @@
             margin-right: 2vh;
 
         }
+        
+    }
+    .registrarse{
+        color: #33A3AA;
+        cursor: pointer;
     }
     
 }
