--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -7,7 +7,7 @@
             <li><img src="../../assets/iconos/camara.png" alt="Video" class="camara"></li>
             <li><img src="../../assets/iconos/señalWifi.png" alt="Sensores" class="sensor"></li>
             <li><img src="../../assets/iconos/simboloPlantaNuclerar.png" alt="Plantas" class="planta"></li>
-            <li><img src="../../assets/iconos/simboloDesloguearse.png" alt="Desloguearse" class="log"></li>
+            <li><img src="../../assets/iconos/simboloDesloguearse.png" alt="Desloguearse" class="log" (click)="logOut()"></li>
         </ul>
     </section>
 </section>
