--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -73,7 +73,8 @@
             top: 307.97px;
             left: 30px;
             gap: 0px;
-            opacity: 0px;
+            opacity: 0px; 
+            cursor: pointer;
         }
     }
     
