--- a/src/app/editar-planta/editar-planta.component.html
+++ b/src/app/editar-planta/editar-planta.component.html
@@ -65,4 +65,8 @@
         
     </div>
     </form>
+    @if(validos){
+        <p>La suma de las lecturas tiene que ser igual a la lectura total</p>
+
+    }
 </section>
