--- a/src/app/plantas/plantas.component.html
+++ b/src/app/plantas/plantas.component.html
@@ -24,17 +24,24 @@
                             <td><p class="nombre texto">{{planta.getNombre}}</p></td>
                             <td><p class="ok texto">{{lecturasOk[index]}}</p></td>
                             <td><p class="medio texto">{{lecturasMedias[index]}}</p></td>
-                            <td><p class="rojo texto">{{lecturasRojas[index]}}</p></td><div class="posicion">
-                            <td class="puntitos" (click)="mostrarOpcion(planta.getId)"><img src="../../assets/iconos/puntos.png"  alt="opciones" class="puntos"></td>
-                            @if(opcionesVisible[index]){
-                                <div class="menu">
-                                    <ul>
-                                        <li (click)="mostrarModificar(index, true)">Modificar</li>
-                                        <li (click)="eliminarPlanta(index)">Eliminar</li>
-                                    </ul>
-                                </div>  
-                                }
-                            </div>
+                            <td><p class="rojo texto">{{lecturasRojas[index]}}</p></td>
+                            
+                            <td class="acciones"(click)="mostrarOpcion(index)" >
+                                <div class="puntitos">
+                                    <img src="../../assets/iconos/puntos.png"  alt="opciones" class="puntos">
+                                    @if(opcionesVisible[index]){
+                                        <div class="menu">
+                                            <ul>
+                                                <li (click)="mostrarModificar(planta.getId,true)">Modificar</li>
+                                                <li (click)="eliminarPlanta(planta.getId)">Eliminar</li>
+                                            </ul>
+                                        </div>  
+                                        }
+                                    
+                                </div>
+                               
+                            </td>
+                            
                         </tr>
                     }
                
