--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -30,6 +30,7 @@
             list-style-type: none;
             li{
                 margin-bottom: 3.5vh;
+                cursor: pointer;
             }
         }
        
