--- a/src/app/editar-planta/editar-planta.component.scss
+++ b/src/app/editar-planta/editar-planta.component.scss
@@ -87,7 +87,9 @@
                             border-radius: 7.43px;
                             border: 0.93px 0px 0px 0px;
                             opacity: 0px;
-                            border: 0.93px solid #C6C9D2
+                            border: 0.93px solid #C6C9D2;
+                            padding: 10px;
+                            
                         }
 
                         select{
@@ -119,6 +121,7 @@
                             color: #33A3AA;
                             border: 1px solid #33A3AA;
                             margin-right: 3vh;
+                            cursor: pointer;
                         }
                         .crear{
                             width: 100px;
@@ -136,6 +139,7 @@
                             text-align: center;
                             background: #33A3AA;
                             color: white;
+                            cursor: pointer;
                         }
             }
         }
