--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -43,6 +43,7 @@
             gap: 0px;
             opacity: 0px;
             margin-right: 1.5vh;
+            cursor: pointer;
         }
     }
     
