--- a/src/app/registro/registro.component.scss
+++ b/src/app/registro/registro.component.scss
@@ -56,6 +56,7 @@
             height: 42px;
             top: 357px;
             left: 390px;
+            padding: 10px;
             gap: 0px;
             border-radius: 7.43px;
             border: 0.93px 0px 0px 0px;
