--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -44,7 +44,7 @@
             @if(registro.get("contrasenia")?.errors?.["required"] && registro.get("contrasenia")?.dirty){
                 <small>La contraseña es requerida</small>
             }@else if(registro.get("contrasenia")?.errors?.["minlength"]){
-                <small>La contraseña tiene que tener como mínimo 8 carcateres</small>
+                <small>La contraseña tiene que tener mas de 8 caracteres</small>
             }
         </div>
        
